// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EndpointsFactory > .build() > Should create an endpoint with intersection middleware 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "n1": {
      "type": "number",
    },
    "n2": {
      "type": "number",
    },
    "s": {
      "type": "string",
    },
  },
  "required": [
    "n1",
    "n2",
    "s",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with intersection middleware 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "b": {
      "type": "boolean",
    },
  },
  "required": [
    "b",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with refined object middleware 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "a": {
      "type": "number",
    },
    "b": {
      "type": "string",
    },
    "i": {
      "type": "string",
    },
  },
  "required": [
    "i",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with refined object middleware 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "o": {
      "type": "boolean",
    },
  },
  "required": [
    "o",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with simple middleware 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "n": {
      "type": "number",
    },
    "s": {
      "type": "string",
    },
  },
  "required": [
    "n",
    "s",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with simple middleware 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "b": {
      "type": "boolean",
    },
  },
  "required": [
    "b",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with union middleware 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": [
    {
      "additionalProperties": false,
      "properties": {
        "n1": {
          "type": "number",
        },
        "s": {
          "type": "string",
        },
      },
      "required": [
        "s",
        "n1",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "n2": {
          "type": "number",
        },
        "s": {
          "type": "string",
        },
      },
      "required": [
        "s",
        "n2",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with union middleware 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "b": {
      "type": "boolean",
    },
  },
  "required": [
    "b",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .buildVoid() > Should be a shorthand for empty object output 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {},
  "type": "object",
}
`;
